tests/ui/diagnostic_namespace/on_unimplemented/on_unimplemented_simple.stderr
error[E0277]: Foo
  --> $DIR/on_unimplemented_simple.rs:9:15
   |
LL |     takes_foo(());
   |     --------- ^^ Bar
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Foo` is not implemented for `()`
   = note: Baz
help: this trait has no implementations, consider adding one
  --> $DIR/on_unimplemented_simple.rs:4:1
   |
LL | trait Foo {}
   | ^^^^^^^^^
note: required by a bound in `takes_foo`
  --> $DIR/on_unimplemented_simple.rs:6:22
   |
LL | fn takes_foo(_: impl Foo) {}
   |                      ^^^ required by this bound in `takes_foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
